--- a/ozowas/ozowapps.csproj
+++ b/ozowas/ozowapps.csproj
@@ -14,6 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\gameoflife\gameoflife.csproj" />
     <ProjectReference Include="..\Sorting\Sorting.csproj" />
   </ItemGroup>
 
